# Chatapp

./: CMakeLists.txt  Readme.txt  client.cpp  client.h  header.h  img.qrc  img2.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  try.txt
